# app/backend/api-spec.yaml
@@ -102,6 +102,33 @@ paths:
             text/plain:
               schema:
                 type: string
+  /users/{uid}:
+    delete:
+      tags:
+      - rest::users
+      operationId: delete
+      parameters:
+      - name: uid
+        in: path
+        description: User ID to delete
+        required: true
+        schema:
+          $ref: '#/components/schemas/u16'
+      responses:
+        '204':
+          description: User was deleted
+        '400':
+          description: Invalid user ID
+        '403':
+          description: Cannot delete the super admin
+        '404':
+          description: User does not exist
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
 components:
   schemas:
     CreateUser:
